[package]
name = "iguana_eye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.27.0", features = ["serde"]}
wgpu = "0.17.1"
imgui = { version = "0.11.0", features = [ "docking" ] }
imgui-winit-support = "0.11.0"
imgui-wgpu = "0.24.0"
pollster = "0.3.0"
log = "0.4.20"
env_logger = "0.10.0"
image = "0.24.7"
memoffset = "0.9.0"
rand = "0.8.5"
cgmath = { version = "0.18.0", features = ["serde"] }
bytemuck = { version = "1.12.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"